# kustomize-wrapper

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: checks.yml  packaging.yml  tests.yml
kustomize/: __init__.py  __main__.py  binaries.py  cli.py  download.py  util.py  version.py
kustomize/commands/: __init__.py  apply.py  build.py  lint.py  version.py
kustomize/helpers/: __init__.py  archive.py  binaries.py  download.py
tests/: test_apply.py  test_binaries.py  test_build.py  test_cli.py  test_commands_apply.py  test_commands_build.py  test_commands_lint.py  test_commands_version.py  test_download.py  test_helpers_archive.py  test_helpers_binaries.py  test_helpers_download.py  test_lint.py  test_util.py  test_version.py
