[build-system]
requires = ["setuptools>=59"]
build-backend = "setuptools.build_meta"

[project]
name = "kustomize-wrapper"
version = "0.16.0"
description = "A wrapper for Kustomize and related tooling"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Peter Bittner", email = "peter@painless.software"},
]
maintainers = [
  {name = "Peter Bittner", email = "peter@painless.software"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
keywords = [
  "kubernetes",
  "kustomize",
]
requires-python = ">=3.7"
dependencies = [
  "click",
  "requests",
  "importlib-metadata; python_version < '3.8'",
]

[project.scripts]
kustomize = "kustomize.cli:main"

[project.urls]
homepage = "https://github.com/painless-software/kustomize-wrapper"

[tool.ruff]
extend-exclude = []
extend-select = ["B", "BLE", "C4", "C90", "COM", "DJ", "DTZ", "EM", "G", "I", "N", "PIE", "PL", "PT", "PTH", "R", "S", "SIM", "T10", "TID", "W", "YTT"]
extend-ignore = ["TID252"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["COM812", "S101"]
"kustomize/helpers/binaries.py" = ["S603"]
"kustomize/helpers/download.py" = ["BLE001", "E501"]

[tool.pytest.ini_options]
addopts = "--junitxml=tests/unittests-report.xml --doctest-modules --color=yes --verbose"

[tool.setuptools.packages.find]
namespaces = false
